# docs/api/openapi.json
@@ -546,6 +546,10 @@
             "title": "Run Id",
             "type": "string"
           },
+          "scene_id": {
+            "title": "Scene Id",
+            "type": "string"
+          },
           "status": {
             "$ref": "#/components/schemas/RunStatus"
           },
@@ -559,6 +563,7 @@
           "run_id",
           "status",
           "reason",
+          "scene_id",
           "summary"
         ],
         "title": "ResultDetailModel",
@@ -579,6 +584,10 @@
             "title": "Run Id",
             "type": "string"
           },
+          "scene_id": {
+            "title": "Scene Id",
+            "type": "string"
+          },
           "status": {
             "$ref": "#/components/schemas/RunStatus"
           },
@@ -592,6 +601,7 @@
           "run_id",
           "status",
           "reason",
+          "scene_id",
           "summary"
         ],
         "title": "ResultListItemModel",
